# ai-marketing

./: .gitignore  README.md  README.zh-CN.md  docker-compose.yml  start-dev.sh
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: campaigns.py  email_drafts.py  influencers.py  router.py  search_tasks.py
backend/app/models/: __init__.py  audit_log.py  email_campaign.py  email_draft.py  email_event.py  email_message.py  influencer.py  search_result.py  search_task.py
backend/app/schemas/: campaign.py  email_draft.py  influencer.py  search_task.py
backend/app/services/: ai_service.py  dedup_service.py  email_service.py  search_service.py  youtube_connector.py
backend/app/workers/: tasks.py
backend/tests/: conftest.py  test_dedup.py  test_email_drafts.py  test_email_integration.py  test_search_tasks.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/campaigns/[campaignId]/: page.tsx
frontend/src/app/drafts/: page.tsx
frontend/src/app/influencers/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/search/[taskId]/: page.tsx
frontend/src/components/: CampaignDashboard.tsx  EmailEditor.tsx  InfluencerTable.tsx  Providers.tsx  SearchForm.tsx  TopNav.tsx
frontend/src/lib/: api.ts
sql/: init_schema.sql
