[project]
name = "ai-email-marketing-backend"
version = "0.1.0"
description = "AI Email Marketing backend service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy[asyncio]>=2.0.39",
  "asyncpg>=0.30.0",
  "alembic>=1.15.0",
  "pydantic-settings>=2.10.0",
  "openai>=1.99.0",
  "httpx>=0.28.1",
  "resend>=2.13.0",
  "python-jose>=3.5.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "httpx>=0.28.1",
  "asgi-lifespan>=2.1.0",
  "aiosqlite>=0.21.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
